rs/client-gen-net/tests/snapshots/generator__multiple_services.snap
---
source: client-gen/tests/generator.rs
expression: "gen(idl, \"Multiple\")"
---
// <auto-generated />
using global::Sails.Remoting;
using global::Sails.Remoting.Abstractions;
using global::Sails.Remoting.Abstractions.Core;

#nullable enable

#pragma warning disable RCS0056 // A line is too long

namespace Multiple.Client;

public interface IMultiple
 { ICall<global::Substrate.NetApi.Model.Types.Primitive.U16> DoThis(global::Substrate.NetApi.Model.Types.Primitive.U32 p1, MyParam p2);
ICall<global::Substrate.NetApi.Model.Types.Primitive.U8> DoThat(global::Substrate.NetApi.Model.Types.Base.BaseTuple<global::Substrate.NetApi.Model.Types.Primitive.U8, global::Substrate.NetApi.Model.Types.Primitive.U32> p1);
 }

 public sealed partial class Multiple : IMultiple
 {

 private const string ROUTE = nameof(Multiple);

 private readonly IRemoting remoting;

 public Multiple(IRemoting remoting) { this.remoting = remoting; }

/// <inheritdoc/>
 public ICall<global::Substrate.NetApi.Model.Types.Primitive.U16> DoThis(global::Substrate.NetApi.Model.Types.Primitive.U32 p1, MyParam p2) { return new RemotingAction<global::Substrate.NetApi.Model.Types.Primitive.U16>(this.remoting, ROUTE, nameof(DoThis) , p1, p2); }
/// <inheritdoc/>
 public ICall<global::Substrate.NetApi.Model.Types.Primitive.U8> DoThat(global::Substrate.NetApi.Model.Types.Base.BaseTuple<global::Substrate.NetApi.Model.Types.Primitive.U8, global::Substrate.NetApi.Model.Types.Primitive.U32> p1) { return new RemotingAction<global::Substrate.NetApi.Model.Types.Primitive.U8>(this.remoting, ROUTE, nameof(DoThat) , p1); } }

public interface INamed
 { IQuery<global::Substrate.NetApi.Model.Types.Primitive.Str> That(global::Substrate.NetApi.Model.Types.Primitive.U32 p1);
 }

 public sealed partial class Named : INamed
 {

 private const string ROUTE = nameof(Named);

 private readonly IRemoting remoting;

 public Named(IRemoting remoting) { this.remoting = remoting; }

/// <inheritdoc/>
 public IQuery<global::Substrate.NetApi.Model.Types.Primitive.Str> That(global::Substrate.NetApi.Model.Types.Primitive.U32 p1) { return new RemotingAction<global::Substrate.NetApi.Model.Types.Primitive.Str>(this.remoting, ROUTE, nameof(That) , p1); } }
